@@ -1,49 +1,0 @@
-# Run Travis CI for R via Docker
-#
-# Made by Dirk Eddelbuettel in August 2018 and released under GPL (>=2)
-
-os: linux
-dist: bionic
-sudo: required
-services: docker
-
-jobs:
-  include:
-    - name: release
-      env: DOCKER_CNTR="rcpp/ci" R="R" COVR="no"
-    - name: r-3.6
-      env: DOCKER_CNTR="rcpp/ci-3.6" R="R" COVR="no"
-    - name: r-3.5
-      env: DOCKER_CNTR="rcpp/ci-3.5" R="R" COVR="no"
-    - name: dev
-      env: DOCKER_CNTR="rcpp/ci-dev" R="RD" COVR="no"
-    - name: coverage
-      env: DOCKER_CNTR="rcpp/ci" R="R" COVR="yes"
-
-env:
-  global:
-    - DOCKER_OPTS="--rm -ti -v $(pwd):/mnt -w /mnt"
-      R_BLD_OPTS="--no-build-vignettes --no-manual"
-      R_CHK_OPTS="--no-vignettes --no-manual"
-      PKG_NAME=$(awk '/Package:/ {print $2}' DESCRIPTION)
-      PKG_VER=$(awk '/Version:/ {print $2}' DESCRIPTION)
-      PKG_TGZ="${PKG_NAME}_${PKG_VER}.tar.gz"
-
-before_install:
-  - docker pull ${DOCKER_CNTR}
-  - docker run ${DOCKER_OPTS} ${DOCKER_CNTR} r -p -e 'sessionInfo()'
-  - if [[ "$R" == "RD" ]]; then docker run ${DOCKER_OPTS} ${DOCKER_CNTR} RDscript -e 'sessionInfo()'; fi
-
-install:
-  - docker run ${DOCKER_OPTS} ${DOCKER_CNTR} ${R} CMD build ${R_BLD_OPTS} .
-
-script:
-  - if [[ "${COVR}" == "no" ]]; then docker run ${DOCKER_OPTS} ${DOCKER_CNTR} ${R} CMD check ${R_CHK_OPTS} ${PKG_TGZ}; fi
-  - if [[ "${COVR}" == "yes" ]]; then docker run ${DOCKER_OPTS} -e CODECOV_TOKEN ${DOCKER_CNTR} r -l covr -e 'codecov()'; fi
-
-notifications:
-  email:
-    on_success: change
-    on_failure: change
-  slack:
-    secure: kUzgzzpgBMc6a+qSjGovfU14U7x9GUXfghDgyF5qBaND/MjFpkmTBfW438Out2buiY+hFNnZc4zThifJM300cOXbcwVentmzuVQ5lLjBhTDvwQgdqytgWr/Ds9dErBeMXr178UD3MJXSOCLhO0wUke2xp2ZsDhsjquT+vFYnuk8=
